NT/ds/security/cryptoapi/pkitrust/tests/signing/bad/b_dig.cab
version https://git-lfs.github.com/spec/v1
oid sha256:1479196cfa044b3e194418123105423cafbbea3b53af39cc1efb29e616fe71d9
size 13321
